--- a/src/app/status/status-list/status-list.component.html
+++ b/src/app/status/status-list/status-list.component.html
@@ -48,5 +48,5 @@
     </tr>
   </table>
 
-  <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" (page)="pageEvent = $event" (click)="onPage(pageEvent)" [length]="500" aria-label="Select page of Servers"></mat-paginator>
+  <mat-paginator [pageSizeOptions]="[5, 10, 25, 100]" [pageSize]="pageSize" (page)="pageEvent = $event" (click)="onPage(pageEvent)" [length]="500" aria-label="Select page of Servers"></mat-paginator>
 </div>
