--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -7,8 +7,14 @@
   <button mat-icon-button routerLink="/login" class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
     <mat-icon>lock</mat-icon>
   </button>
-  <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">
-    <mat-icon>share</mat-icon>
+  <button mat-icon-button class="example-icon" routerLink="point-card/qr" aria-label="Example icon-button with share icon">
+    <mat-icon>qr_code</mat-icon>
+  </button>
+  <button mat-icon-button class="example-icon" routerLink="point-card" aria-label="Example icon-button with share icon">
+    <mat-icon>view_agenda</mat-icon>
+  </button>
+  <button mat-icon-button class="example-icon" routerLink="point-card/scan" aria-label="Example icon-button with share icon">
+    <mat-icon>qr_code_scanner</mat-icon>
   </button>
 </mat-toolbar>
 
